--- a/my self/index.html
+++ b/my self/index.html
@@ -29,7 +29,8 @@
     <div class="main">
         <div  class="about">    
             <h1 >About me</h1>
-            <P style="background-image: url(/img/Madara\ uchiha\ tshirt\ design\ -\ DABELYU\ STD.jpg);">Shiva Bhattarai is a talented web developer with <br> a passion for crafting innovative and user-friendly
+            <P style="background-image: url(/img/Madara\ uchiha\ tshirt\ design\ -\ DABELYU\ STD.jpg);">
+                Shiva Bhattarai is a talented web developer with <br> a passion for crafting innovative and user-friendly
         </div>
     <div class="b">
         <img src="/img/itachi-uchiha-red-3840x2160-18691.jpg" alt="error">
