--- a/small project/index.html
+++ b/small project/index.html
@@ -3,29 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>colour changer</title>
+    <title>Clock</title>
 </head>
 <style>
     body{
         display: flex;
         justify-content: center;
-        align-items: center;
-        height: 100vh;
+        text-align: center;
+        font-size: 6rem;
+        background-image: url(https://motionbgs.com/media/6276/obito-manga.jpg);
+        background-position: center;
+       background-size: contain;
     }
-    
 </style>
 <body>
-    <div class="main">
-        <button onclick="changecolour('red')">red</button>
-        <button  onclick="changecolour('blue')"> blue</button>
-        <button  onclick="changecolour('green')">green</button>
-        <button  onclick="changecolour('white')">def</button>
+    <div >
+        <p id="clock" style="color: gold;"></p>
     </div>
     <script>
-        function changecolour(colour) {
-            document.body.style.backgroundColor=colour
+        function atcl() {
+            let now=new Date();
+            document.getElementById("clock").textContent= now.toLocaleTimeString();
+
             
         }
+        setInterval(atcl,1000);
+        atcl();
     </script>
 </body>
 </html>
