--- a/small project/logform.html
+++ b/small project/logform.html
@@ -68,7 +68,7 @@
         </div>
     </form>
     <p id="std" style="color: blue;"> </p>
-     <p  style="color:blue;">Do not have a acccount. <span><a href="#">Sing up..?</a></span></p>
+     <p  style="color:blue;">Do not have a acccount. <span><a href="/small project/signup.html">Sing up..?</a></span></p>
     </div>
    
 <script>
